1.0.5

Run on all frames in order to work with the new FB UI (which has these elements in an frame)

1.0.4

Also enable the code on /ds/ facebook urls (apparently also a thing)

1.0.3

TBA

1.0.2

Also load on root page /ads/preferences

1.0.1

No longer minify builds

1.0.0

Initial version