@@ -2,7 +2,7 @@
   "name": "__MSG_appName__",
   "short_name": "__MSG_appShortName__",
   "description": "__MSG_appDescription__",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "manifest_version": 2,
   "default_locale": "en",
   "icons": {
