@@ -1,6 +1,7 @@
 1.0.5
 
 Run on all frames in order to work with the new FB UI (which has these elements in an frame)
+Update text to hint reloading might be required when many interests need to be cleared
 
 1.0.4
 
